# diy-python

./: .gitignore  Player_batting_stats.csv  README.md  cricketData.ipynb  day1.ipynb  day2.ipynb  day5.ipynb  day6.ipynb  freecodecamp_data_analysis.ipynb  http-server.py  idx-template.json  idx-template.nix  leetcde.ipynb  leetcode.ipynb  numpy.ipynb  pandasPad.ipynb  pyproject.toml  requests.http  requirements.txt  riverCrossing.ipynb
.idx/: dev.nix
datasets/: users_posts.json
