[tool.poetry]
name = "diy-python"
version = "0.1.0"
description = ""
authors = ["Sayan Naskar <nascarsayan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1.post1"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
